tectonic/ms-user-validation/package/echoservice.yml
apiVersion: v1
kind: Service
metadata:
  name: echoheaders-default-uv
  labels:
    app: echoheaders-default-uv
  namespace: test
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30305
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoheaders-default-uv
