tectonic/ms-user-validation/package/user-validation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-validation-service
  namespace: test
spec:
  ports:
  - port: 80
    nodePort: 30080
    targetPort: ms-uv-port
    protocol: TCP
  selector:
    app: user-validation
  type: NodePort
